--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "~9.1.7",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "dialog-service": "^0.2.3",
     "express": "^4.17.1",
+    "ng-quick-form": "^0.1.3",
     "ng-snotify": "^9.0.1",
     "ng2-page-scroll": "^4.0.0-beta.12",
     "ngx-spinner": "^9.0.2",
